fixed equal func added percent operation

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <section class="calculator">
     <div class="container">
 
-        <input type="text" class="result" value="0" disabled>
+        <input type="text" class="result" value="0" maxlength="5" disabled>
 
-        <button type="button" class="br grayBG clear" value="all-clear">C</button>
-        <button type="button" class="br grayBG" value="">+/-</button>
-        <button type="button" class="br grayBG percent">%</button>
+        <button type="button" class="br grayBG clear">C</button>
+        <button type="button" class="br grayBG negative">+/-</button>
+        <button type="button" class="br grayBG operator" value="%">%</button>
         <button type="button" class="br operator orangeBG" value="/">&divide;</button>
 
         <button type="button" class="numbers darkGreyBG br" value="7">7</button>
